--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-altair
-numpy
-pandas
-pydeck
-streamlit
+altair==4.1.0
+numpy==1.21.2
+pandas==1.3.3
+pydeck==0.7.0
+streamlit==1.9.0
 tensorflow>=2.0
-Pillow
-
+Pillow==8.2.0
+opencv-python-headless==4.5.3.56
+eth-account==0.5.7
+cryptography==3.4.8
+secrets==1.0.2
+stringcase==1.2.0
