--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-altair==4.1.0
+altair
 numpy
 pandas
 pydeck
 streamlit==1.9.0
 tensorflow>=2.0
-Pillow==8.2.0
-opencv-python-headless==4.5.3.56
-eth-account==0.5.7
-cryptography==3.4.8
-secrets==1.0.2
-stringcase==1.2.0
+Pillow
+eth-account
+cryptography
+secrets
+stringcase
